--- a/PadLab1/.project
+++ b/PadLab1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PAD1</name>
+	<name>PadLab1</name>
 	<comment></comment>
 	<projects>
 	</projects>
